Firsts assets updates

--- a/index-2.html
+++ b/index-2.html
@@ -114,9 +114,9 @@
 						<div class="banner-left banner" style="background-image: url(assets/images/banner/01.jpg)">
 							<div class="banner-lc">
 								<div class="banner-left-content">
-									<p>The Largest Conference of This Year</p>
-									<h2>World Business Conference 2020</h2>
-									<a href="#" class="btn-defult">Buy Ticket Now</a>
+									<p>La conferència pels alumnes de Formació Professional</p>
+									<h2>FP NEXT 2023</h2>
+									<a href="#" class="btn-defult">Inscriu-te</a>
 								</div>
 								<div class="banner-lc-bottom">
 		                            <span>March 21<sup>th</sup> <span>at</span> 8:00 am</span>
